Fixed IE Sidebar and ComponentRenderer layout bugs.

--- a/client/src/components/ComponentRenderer/ComponentRendered.less
+++ b/client/src/components/ComponentRenderer/ComponentRendered.less
@@ -57,7 +57,7 @@
   display: flex;
   align-items: center;
   margin: auto;
-  flex: 1;
+  //flex: 1;
   padding: 0 12px;
   margin-top: 0;
   width: 100%;
