--- a/client/src/components/FilterSidebarComponentItem/FilterSidebarComponentItem.less
+++ b/client/src/components/FilterSidebarComponentItem/FilterSidebarComponentItem.less
@@ -24,6 +24,7 @@
 .filter-sidebar-component-item__version {
   margin-left: 6px;
   display: flex;
+  overflow: hidden;
 }
 
 .filter-sidebar-component-item__version-select {
